[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/smash.gd" type="Script" id=1]
[ext_resource path="res://assets/players/ray/smash.jpg" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 38.8383

[node name="smash" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
monitoring = false

[node name="Sprite" type="Sprite" parent="Area2D"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
